--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,12 +64,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Enemy.cs" />
+    <Compile Include="Assets\Scripts\Elements\Enemy.cs" />
+    <Compile Include="Assets\Scripts\Elements\LaserBehavior.cs" />
+    <Compile Include="Assets\Scripts\Elements\Player.cs" />
+    <Compile Include="Assets\Scripts\Elements\SpawnManager.cs" />
     <Compile Include="Assets\Scripts\Game\GameManager.cs" />
-    <Compile Include="Assets\Scripts\LaserBehavior.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Powerups\Powerup.cs" />
-    <Compile Include="Assets\Scripts\SpawnManager.cs" />
     <Compile Include="Assets\Scripts\UI\UIManager.cs" />
     <None Include="Assets\2D-Galaxy-Assets\2D Galaxy Assets\Game\Materials\Shaders\Galaxy.shader" />
     <Reference Include="UnityEngine">
